[package]
name = "mini-os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 使用cargo build 编译时使用的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用 cargo build --release 编译时使用的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"



